@@ -65,14 +65,23 @@
                     <version>${junit.version}</version>
                     <scope>provided</scope>
                 </dependency>
+                <!-- RestAssured -->
+                <dependency>
+                    <groupId>io.rest-assured</groupId>
+                    <artifactId>rest-assured</artifactId>
+                    <version>5.3.1</version>
+                    <scope>test</scope>
+                </dependency>
             </dependencies>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${surefire.version}</version>
+                        <version>3.0.0-M7</version>
                         <configuration>
+                            <!-- Это для того, чтобы reflective access не вылазил -->
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                             </suiteXmlFiles>
